// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`"Add" commands add-babel (with React) 1`] = `
"{
    name: tomo-test,
    children: [
        {
            name: babel.config.js,
            size: 347,
            type: file
        }
    ],
    size: 347,
    type: directory
}
"
`;

exports[`"Add" commands add-babel (with React) 2`] = `
"module.exports = {
    plugins: [
        '@babel/plugin-transform-runtime',
        '@babel/plugin-proposal-class-properties',
        '@babel/plugin-proposal-export-default-from',
        '@babel/plugin-proposal-optional-chaining'
    ],
    presets: [
        @babel/preset-env,
        babel-preset-minify,
        @babel/preset-react
    ]
};"
`;

exports[`"Add" commands add-babel 1`] = `
"{
    name: tomo-test,
    children: [
        {
            name: babel.config.js,
            size: 309,
            type: file
        }
    ],
    size: 309,
    type: directory
}
"
`;

exports[`"Add" commands add-babel 2`] = `
"module.exports = {
    plugins: [
        '@babel/plugin-transform-runtime',
        '@babel/plugin-proposal-class-properties',
        '@babel/plugin-proposal-export-default-from',
        '@babel/plugin-proposal-optional-chaining'
    ],
    presets: [
        '@babel/preset-env',
        'minify'
    ]
};"
`;

exports[`"Add" commands add-esdoc (with React) 1`] = `
"{
    name: tomo-test,
    children: [
        {
            name: esdoc.conf.json,
            size: 417,
            type: file
        }
    ],
    size: 417,
    type: directory
}
"
`;

exports[`"Add" commands add-esdoc (with React) 2`] = `
"{
    \\"source\\": \\"./src\\",
    \\"destination\\": \\"./docs\\",
    \\"plugins\\": [
        {
            \\"name\\": \\"esdoc-standard-plugin\\"
        },
        {
            \\"name\\": \\"esdoc-ecmascript-proposal-plugin\\",
            \\"option\\": {
                \\"all\\": true
            }
        },
        {
            \\"name\\": \\"esdoc-jsx-plugin\\",
            \\"options\\": {
                \\"enable\\": true
            }
        }
    ]
}
"
`;

exports[`"Add" commands add-esdoc 1`] = `
"{
    \\"name\\": \\"my-project\\",
    \\"version\\": \\"0.0.0\\",
    \\"description\\": \\"A super cool app/server/tool/library/widget/thingy\\",
    \\"license\\": \\"MIT\\",
    \\"keywords\\": []
}
"
`;

exports[`"Add" commands add-esdoc 2`] = `
"{
    name: tomo-test,
    children: [
        {
            name: esdoc.conf.json,
            size: 286,
            type: file
        },
        {
            name: package.json,
            size: 512,
            type: file
        }
    ],
    size: 798,
    type: directory
}
"
`;

exports[`"Add" commands add-esdoc 3`] = `
"{
    \\"name\\": \\"my-project\\",
    \\"version\\": \\"0.0.0\\",
    \\"description\\": \\"A super cool app/server/tool/library/widget/thingy\\",
    \\"license\\": \\"MIT\\",
    \\"keywords\\": [],
    \\"scripts\\": {
        \\"lint:docs\\": \\"eslint . --no-eslintrc --rule valid-jsdoc:error --parser babel-eslint\\",
        \\"build:docs\\": \\"jsdoc src -r --destination ./docs\\",
        \\"open:docs\\": \\"opn ./docs/index.html\\",
        \\"preesdoc\\": \\"npm run lint:docs\\",
        \\"esdoc\\": \\"npm run build:docs\\",
        \\"postesdoc\\": \\"npm run open:docs\\"
    }
}
"
`;

exports[`"Add" commands add-esdoc 4`] = `
"{
    \\"source\\": \\"./src\\",
    \\"destination\\": \\"./docs\\",
    \\"plugins\\": [
        {
            \\"name\\": \\"esdoc-standard-plugin\\"
        },
        {
            \\"name\\": \\"esdoc-ecmascript-proposal-plugin\\",
            \\"option\\": {
                \\"all\\": true
            }
        }
    ]
}
"
`;

exports[`"Add" commands add-eslint (with React) 1`] = `
"{
    name: tomo-test,
    children: [
        {
            name: .eslintignore,
            size: 36,
            type: file
        },
        {
            name: .eslintrc.js,
            size: 353,
            type: file
        }
    ],
    size: 389,
    type: directory
}
"
`;

exports[`"Add" commands add-eslint (with React) 2`] = `
"module.exports = {
    env: {
        es6: true,
        jest: true
    },
    extends: [
        omaha-prime-grade,
        plugin:react/recommended
    ],
    parser: 'babel-eslint',
    parserOptions: {
        ecmaFeatures: {
            jsx: true
        }
    },
    settings: {
        react: {
            version: 'undefined'
        }
    }
};"
`;

exports[`"Add" commands add-eslint 1`] = `
"{
    name: tomo-test,
    children: [
        {
            name: .eslintignore,
            size: 36,
            type: file
        },
        {
            name: .eslintrc.js,
            size: 154,
            type: file
        }
    ],
    size: 190,
    type: directory
}
"
`;

exports[`"Add" commands add-eslint 2`] = `
"module.exports = {
    env: {
        es6: true,
        jest: true
    },
    extends: [
        'omaha-prime-grade'
    ],
    parser: 'babel-eslint'
};"
`;

exports[`"Add" commands add-jest 1`] = `
"{
    \\"name\\": \\"my-project\\",
    \\"version\\": \\"0.0.0\\",
    \\"description\\": \\"A super cool app/server/tool/library/widget/thingy\\",
    \\"license\\": \\"MIT\\",
    \\"keywords\\": []
}
"
`;

exports[`"Add" commands add-jest 2`] = `
"{
    \\"name\\": \\"my-project\\",
    \\"version\\": \\"0.0.0\\",
    \\"description\\": \\"A super cool app/server/tool/library/widget/thingy\\",
    \\"license\\": \\"MIT\\",
    \\"keywords\\": [],
    \\"scripts\\": {
        \\"test\\": \\"jest .*.test.js --coverage\\",
        \\"test:watch\\": \\"npm test -- --watchAll\\"
    }
}
"
`;

exports[`"Add" commands add-makefile 1`] = `
"{
    name: tomo-test,
    children: [
        {
            name: Makefile,
            size: 26,
            type: file
        }
    ],
    size: 26,
    type: directory
}
"
`;

exports[`"Add" commands add-makefile 2`] = `
"{
    name: tomo-test,
    children: [
        {
            name: .eslintignore,
            size: 36,
            type: file
        },
        {
            name: .eslintrc.js,
            size: 353,
            type: file
        },
        {
            name: Makefile,
            size: 548,
            type: file
        },
        {
            name: assets,
            children: [
                {
                    name: css,
                    children: [
                        {
                            name: style.css,
                            size: 38,
                            type: file
                        }
                    ],
                    size: 38,
                    type: directory
                },
                {
                    name: fonts,
                    children: [
                        {
                            name: .gitkeep,
                            size: 0,
                            type: file
                        }
                    ],
                    size: 0,
                    type: directory
                },
                {
                    name: images,
                    children: [
                        {
                            name: .gitkeep,
                            size: 0,
                            type: file
                        }
                    ],
                    size: 0,
                    type: directory
                },
                {
                    name: index.html,
                    size: 534,
                    type: file
                },
                {
                    name: library,
                    children: [
                        {
                            name: .gitkeep,
                            size: 0,
                            type: file
                        }
                    ],
                    size: 0,
                    type: directory
                },
                {
                    name: templates,
                    children: [
                        {
                            name: example.hbs,
                            size: 0,
                            type: file
                        }
                    ],
                    size: 0,
                    type: directory
                },
                {
                    name: workers,
                    children: [
                        {
                            name: .gitkeep,
                            size: 0,
                            type: file
                        }
                    ],
                    size: 0,
                    type: directory
                }
            ],
            size: 572,
            type: directory
        },
        {
            name: babel.config.js,
            size: 347,
            type: file
        },
        {
            name: package.json,
            size: 500,
            type: file
        },
        {
            name: src,
            children: [
                {
                    name: components,
                    children: [
                        {
                            name: app.js,
                            size: 363,
                            type: file
                        }
                    ],
                    size: 363,
                    type: directory
                },
                {
                    name: main.js,
                    size: 726,
                    type: file
                },
                {
                    name: plugins,
                    children: [
                        {
                            name: mn.radio.logging.js,
                            size: 3807,
                            type: file
                        },
                        {
                            name: mn.redux.state.js,
                            size: 2069,
                            type: file
                        }
                    ],
                    size: 5876,
                    type: directory
                },
                {
                    name: shims,
                    children: [
                        {
                            name: mn.renderer.shim.js,
                            size: 486,
                            type: file
                        },
                        {
                            name: mn.templates.shim.js,
                            size: 662,
                            type: file
                        }
                    ],
                    size: 1148,
                    type: directory
                }
            ],
            size: 8113,
            type: directory
        }
    ],
    size: 10469,
    type: directory
}
"
`;

exports[`"Add" commands add-makefile 3`] = `"# Makefile built with tomo"`;

exports[`"Add" commands add-makefile 4`] = `
"# Makefile built from /path/to/package.json

lint: ## Task description
	eslint . -c ./.eslintrc.js --fix

lint-watch: ## Task description
	watch 'make lint' src

lint-tests: ## Task description
	eslint __tests__/**/*.js -c ./.eslintrc.js --fix --no-ignore

test: ## Task description
	jest .*.test.js --coverage

test-watch: ## Task description
	jest .*.test.js --coverage --watchAll

help: ## Show this help
	@fgrep -h \\"##\\" $(MAKEFILE_LIST) | fgrep -v fgrep | sed -e 's/\\\\$$//' | sed -e 's/##/\\\\n    /'"
`;

exports[`"Add" commands add-marionette 1`] = `
"{
    name: tomo-test,
    children: [
        {
            name: assets,
            children: [
                {
                    name: css,
                    children: [
                        {
                            name: style.css,
                            size: 38,
                            type: file
                        }
                    ],
                    size: 38,
                    type: directory
                },
                {
                    name: fonts,
                    children: [
                        {
                            name: .gitkeep,
                            size: 0,
                            type: file
                        }
                    ],
                    size: 0,
                    type: directory
                },
                {
                    name: images,
                    children: [
                        {
                            name: .gitkeep,
                            size: 0,
                            type: file
                        }
                    ],
                    size: 0,
                    type: directory
                },
                {
                    name: index.html,
                    size: 534,
                    type: file
                },
                {
                    name: library,
                    children: [
                        {
                            name: .gitkeep,
                            size: 0,
                            type: file
                        }
                    ],
                    size: 0,
                    type: directory
                },
                {
                    name: templates,
                    children: [
                        {
                            name: example.hbs,
                            size: 0,
                            type: file
                        }
                    ],
                    size: 0,
                    type: directory
                },
                {
                    name: workers,
                    children: [
                        {
                            name: .gitkeep,
                            size: 0,
                            type: file
                        }
                    ],
                    size: 0,
                    type: directory
                }
            ],
            size: 572,
            type: directory
        },
        {
            name: src,
            children: [
                {
                    name: components,
                    children: [
                        {
                            name: app.js,
                            size: 363,
                            type: file
                        }
                    ],
                    size: 363,
                    type: directory
                },
                {
                    name: main.js,
                    size: 726,
                    type: file
                },
                {
                    name: plugins,
                    children: [
                        {
                            name: mn.radio.logging.js,
                            size: 3807,
                            type: file
                        },
                        {
                            name: mn.redux.state.js,
                            size: 2069,
                            type: file
                        }
                    ],
                    size: 5876,
                    type: directory
                },
                {
                    name: shims,
                    children: [
                        {
                            name: mn.renderer.shim.js,
                            size: 486,
                            type: file
                        },
                        {
                            name: mn.templates.shim.js,
                            size: 662,
                            type: file
                        }
                    ],
                    size: 1148,
                    type: directory
                }
            ],
            size: 8113,
            type: directory
        }
    ],
    size: 8685,
    type: directory
}
"
`;

exports[`"Add" commands add-postcss 1`] = `
"module.exports = {
    parser: require('postcss-safe-parser'),
    processors: [
        require('stylelint')(),
        require('postcss-import')(),
        require('postcss-cssnext')(),
        require('uncss').postcssPlugin({html: ['index.html']}),
        require('cssnano')(),
        require('postcss-reporter')({clearReportedMessages: true})
    ]
};"
`;

exports[`"Add" commands add-postcss 2`] = `
"{
    \\"name\\": \\"my-project\\",
    \\"version\\": \\"0.0.0\\",
    \\"description\\": \\"A super cool app/server/tool/library/widget/thingy\\",
    \\"license\\": \\"MIT\\",
    \\"keywords\\": []
}
"
`;

exports[`"Add" commands add-webpack 1`] = `
"{
    \\"name\\": \\"my-project\\",
    \\"version\\": \\"0.0.0\\",
    \\"description\\": \\"A super cool app/server/tool/library/widget/thingy\\",
    \\"license\\": \\"MIT\\",
    \\"keywords\\": []
}
"
`;

exports[`"Add" commands add-webpack 2`] = `
"{
    name: tomo-test,
    children: [
        {
            name: babel.config.js,
            size: 347,
            type: file
        },
        {
            name: package.json,
            size: 314,
            type: file
        },
        {
            name: webpack.config.js,
            size: 755,
            type: file
        }
    ],
    size: 1416,
    type: directory
}
"
`;

exports[`"Add" commands add-webpack 3`] = `
"/* eslint-env node */
const {resolve} = require('path');
const DashboardPlugin = require('webpack-dashboard/plugin');

module.exports = {
    mode: 'development',
    entry: {
        app: 'src/main.js'
    },
    output: {
        path: resolve('./dist'),
        filename: 'bundle.min.js'
    },
    module: {
        rules: [
            {
                test: /.js?$/,
                exclude: /node_modules/,
                loader: 'babel-loader',
                query: {
                    presets: [
                        '@babel/env'
                    ]
                }
            }
        ]
    },
    plugins: [
        new DashboardPlugin()
    ],
    resolve: {
        modules: [resolve(__dirname, 'src'), 'node_modules']
    }
};"
`;

exports[`"Add" commands add-webpack 4`] = `
"{
    \\"name\\": \\"my-project\\",
    \\"version\\": \\"0.0.0\\",
    \\"description\\": \\"A super cool app/server/tool/library/widget/thingy\\",
    \\"license\\": \\"MIT\\",
    \\"keywords\\": [],
    \\"scripts\\": {
        \\"build\\": \\"webpack\\",
        \\"build:watch\\": \\"webpack-dashboard -- webpack-dev-server --config ./webpack.config.js\\"
    }
}
"
`;

exports[`"Create/New" commands create new app 1`] = `
"{
    name: tomo-test,
    children: [
        {
            name: .eslintignore,
            size: 36,
            type: file
        },
        {
            name: .eslintrc.js,
            size: 154,
            type: file
        },
        {
            name: assets,
            children: [
                {
                    name: css,
                    children: [
                        {
                            name: style.css,
                            size: 38,
                            type: file
                        }
                    ],
                    size: 38,
                    type: directory
                },
                {
                    name: fonts,
                    children: [
                        {
                            name: .gitkeep,
                            size: 0,
                            type: file
                        }
                    ],
                    size: 0,
                    type: directory
                },
                {
                    name: images,
                    children: [
                        {
                            name: .gitkeep,
                            size: 0,
                            type: file
                        }
                    ],
                    size: 0,
                    type: directory
                },
                {
                    name: index.html,
                    size: 534,
                    type: file
                },
                {
                    name: library,
                    children: [
                        {
                            name: .gitkeep,
                            size: 0,
                            type: file
                        }
                    ],
                    size: 0,
                    type: directory
                },
                {
                    name: templates,
                    children: [
                        {
                            name: example.hbs,
                            size: 0,
                            type: file
                        }
                    ],
                    size: 0,
                    type: directory
                },
                {
                    name: workers,
                    children: [
                        {
                            name: .gitkeep,
                            size: 0,
                            type: file
                        }
                    ],
                    size: 0,
                    type: directory
                }
            ],
            size: 572,
            type: directory
        },
        {
            name: babel.config.js,
            size: 309,
            type: file
        },
        {
            name: package.json,
            size: 500,
            type: file
        },
        {
            name: src,
            children: [
                {
                    name: components,
                    children: [
                        {
                            name: app.js,
                            size: 363,
                            type: file
                        }
                    ],
                    size: 363,
                    type: directory
                },
                {
                    name: main.js,
                    size: 726,
                    type: file
                },
                {
                    name: plugins,
                    children: [
                        {
                            name: mn.radio.logging.js,
                            size: 3807,
                            type: file
                        },
                        {
                            name: mn.redux.state.js,
                            size: 2069,
                            type: file
                        }
                    ],
                    size: 5876,
                    type: directory
                },
                {
                    name: shims,
                    children: [
                        {
                            name: mn.renderer.shim.js,
                            size: 486,
                            type: file
                        },
                        {
                            name: mn.templates.shim.js,
                            size: 662,
                            type: file
                        }
                    ],
                    size: 1148,
                    type: directory
                }
            ],
            size: 8113,
            type: directory
        }
    ],
    size: 9684,
    type: directory
}
"
`;

exports[`"Create/New" commands create new app 2`] = `
"{
    \\"name\\": \\"my-project\\",
    \\"version\\": \\"0.0.0\\",
    \\"description\\": \\"A super cool app/server/tool/library/widget/thingy\\",
    \\"license\\": \\"MIT\\",
    \\"keywords\\": [],
    \\"scripts\\": {
        \\"lint\\": \\"eslint . -c ./.eslintrc.js --fix\\",
        \\"lint:watch\\": \\"watch 'npm run lint' src\\",
        \\"lint:tests\\": \\"eslint __tests__/**/*.js -c ./.eslintrc.js --fix --no-ignore\\",
        \\"test\\": \\"jest .*.test.js --coverage\\",
        \\"test:watch\\": \\"npm test -- --watchAll\\"
    },
    \\"main\\": \\"src/main.js\\"
}
"
`;

exports[`"Create/New" commands create new project 1`] = `
"{
    name: tomo-test,
    children: [
        {
            name: .eslintignore,
            size: 36,
            type: file
        },
        {
            name: .eslintrc.js,
            size: 154,
            type: file
        },
        {
            name: babel.config.js,
            size: 309,
            type: file
        },
        {
            name: package.json,
            size: 473,
            type: file
        },
        {
            name: src,
            children: [],
            size: 0,
            type: directory
        }
    ],
    size: 972,
    type: directory
}
"
`;

exports[`"Create/New" commands create package.json 1`] = `
"{
    \\"name\\": \\"my-project\\",
    \\"version\\": \\"0.0.0\\",
    \\"description\\": \\"A super cool app/server/tool/library/widget/thingy\\",
    \\"license\\": \\"MIT\\",
    \\"keywords\\": []
}
"
`;

exports[`"Create/New" commands create source directory 1`] = `
"{
    name: tomo-test,
    children: [
        {
            name: some-random-folder-name,
            children: [],
            size: 0,
            type: directory
        }
    ],
    size: 0,
    type: directory
}
"
`;

exports[`"Remove" commands remove webpack 1`] = `
"{
    name: tomo-test,
    children: [
        {
            name: package.json,
            size: 314,
            type: file
        },
        {
            name: webpack.config.js,
            size: 755,
            type: file
        }
    ],
    size: 1069,
    type: directory
}
"
`;

exports[`"Remove" commands remove webpack 2`] = `
"{
    \\"name\\": \\"my-project\\",
    \\"version\\": \\"0.0.0\\",
    \\"description\\": \\"A super cool app/server/tool/library/widget/thingy\\",
    \\"license\\": \\"MIT\\",
    \\"keywords\\": [],
    \\"scripts\\": {
        \\"build\\": \\"webpack\\",
        \\"build:watch\\": \\"webpack-dashboard -- webpack-dev-server --config ./webpack.config.js\\"
    }
}
"
`;

exports[`"Remove" commands remove webpack 3`] = `
"{
    name: tomo-test,
    children: [
        {
            name: package.json,
            size: 187,
            type: file
        }
    ],
    size: 187,
    type: directory
}
"
`;

exports[`"Remove" commands remove webpack 4`] = `
"{
    \\"name\\": \\"my-project\\",
    \\"version\\": \\"0.0.0\\",
    \\"description\\": \\"A super cool app/server/tool/library/widget/thingy\\",
    \\"license\\": \\"MIT\\",
    \\"keywords\\": [],
    \\"scripts\\": {}
}
"
`;
